multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container
spec:
  containers:
  - image: nginx
    name: nginx
  - image: busybox
    name: buxybox
  - image: redis
    name: redis
  - image: alpine
    name: alpine
