nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod 
  labels:
    app: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
