pod-manual.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dp-net
spec:
  replicas: 2
  selector:
    matchLabels:
      run: webhead
  template:
    metadata:
      labels:
        run: webhead
    spec:
      containers:
      - image: busybox
        name: busybox
        command: ["sleep","1000"]
      nodeSelector:
        net: gigabit
      tolerations:
      - key: node-role.kubernetes.io/master
        effect: NoSchedule
      schedulerName: default-scheduler
