test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-pod
  labels:
    app: emptyDir
spec:
  containers:
  - image: nginx
    name: nginx
    volumeMounts:
    - name: vol01
      mountPath: /tmp
  volumes:
  - name: vol01
    emptyDir: {}
