web-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-dep
  annotations:
    AppVersion: "3.4"
spec:
  selector:
    matchLabels:
      tier: frontend
  template:
    metadata:
      labels: 
        tier: frontend
    spec:
      containers:
      - image: nginx:1.7.9
        name: nginx
        ports:  
        - containerPort: 80
