with-files.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-files
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - mountPath: /tmp
      name: vol01
  volumes:
  - name: vol01
    emptyDir: {}
